# equityguessr

./: .gitignore
backend/: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  setup.sh  test_server.sh
db_api/: .gcloudignore  Dockerfile  api_server.py  requirements.txt
frontend/: .gitignore  SETUP.md  fix-start.sh  package-lock 2.json  package-lock.json  package.json  run-dev.sh  start.sh
frontend/public/: index.html  manifest.json
frontend/src/: App 3.tsx  App 4.tsx  App.css  App.tsx  index.css
frontend/src/components/: CardDemo.tsx  Leaderboard.tsx  LeaderboardModal.tsx  PlayingCard 2.tsx  PlayingCard.tsx  PlayingCardSVG 2.tsx
frontend/src/lib/: firebase.ts  scenarios.ts
frontend/src/services/: LeaderboardService.ts  ScenarioCache.ts
scripts/: precompute.py  requirements.txt  schema.sql
src/: Button.jsx  Header.jsx  index.js  styles.scss
